--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@1,700&family=Nunito:wght@700&family=Yellowtail&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" type="text/css" href="CSS/normalize.css">
-    <link rel="stylesheet" type="text/css" href="CSS/Style.css">
+    <link rel="stylesheet" type="text/css" href="Assets/CSS/normalize.css">
+    <link rel="stylesheet" type="text/css" href="Assets/CSS/Style.css">
 </head>
 <body>
 
@@ -44,14 +44,14 @@
     <section id="servicos">
         <h2>Serviços</h2>
             <div>
-                <img src="Img/p1.png" alt="Camera">
+                <img src="Assets/Img/p1.png" alt="Camera">
                 <h3>fotografias</h3>
                 <p>Guarde Momentos Importantes, como casamento, formaturas,
                     aniversários para sempre e com alta qualidade.</p>
             </div>
 
             <div>
-                <img src="Img/p2.png" alt="Filme">
+                <img src="Assets/Img/p2.png" alt="Filme">
                 <h3>Edição de Vídeos</h3>
                 <p>Quer transformar alguma lembrança em vídeo
                     em algo emocionante com trilha sonora, textos
@@ -59,7 +59,7 @@
             </div>
 
             <div>
-                <img src="Img/p3.png" alt="videoplayer">
+                <img src="Assets/Img/p3.png" alt="videoplayer">
                 <h3>Captação de Imagem</h3>
                 <p>Vai participar de algum evento importante em sua
                     vida? Então é importante recordar tudo a cada
@@ -69,12 +69,12 @@
 
     <section id="fotos">
         <h2>Fotos</h2>
-        <img src="Img/ceu.jpg" alt="ceu">
-        <img src="Img/grama.jpg" alt="grama">
-        <img src="Img/montanha.jpg" alt="montanha">
-        <img src="Img/mar.jpg" alt="mar">
-        <img src="Img/arvores.jpg" alt="arvore">
-        <img src="Img/ponte.jpg" alt="ponte">
+        <img src="assets/Img/ceu.jpg" alt="ceu">
+        <img src="assets/Img/grama.jpg" alt="grama">
+        <img src="assets/Img/montanha.jpg" alt="montanha">
+        <img src="assets/Img/mar.jpg" alt="mar">
+        <img src="assets/Img/arvores.jpg" alt="arvore">
+        <img src="assets/Img/ponte.jpg" alt="ponte">
     </section>
 
     <section id="contato">
@@ -82,12 +82,12 @@
         <p>Vem falar com a Gente</p>
         
         <div> 
-            <img src="Img/tel.png" alt="telefone">
+            <img src="assets/Img/tel.png" alt="telefone">
             <p><a href="tel:48999887733">(48) 99988-7733</a></p>
         </div>
 
         <div> 
-            <img src="Img/mail.png" alt="email">
+            <img src="assets/Img/mail.png" alt="email">
             <p><a href="mailto:contato@abcd">contato@abcd</a></p>
         </div>
     </section>
